[project]
name = "survival-metrics-censoring"
version = "0.1.0"
description = "Unified experimental framework to train and evaluate survival analysis models under varying censorship levels and replications"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "lifelines",
    "scikit-survival",
    "optuna",
    "torchtuples",
    "pycox",
    "SurvivalEVAL",
]

[tool.uv]
package = false
